WIP: lesson_08
- api.MultiCreateRoleV1
- repo.AddRoles
- packages:
  - tracing
  - producer
